--- a/interfazes/.ui/home-evento-listado_mesas.ui
+++ b/interfazes/.ui/home-evento-listado_mesas.ui
@@ -53,7 +53,7 @@ QLabel#titulo{color:white; font-size:20pt; font-weight:600;}</string>
        <string notr="true">QLabel{font-size:14pt; font-weight:600; color:#333; margin:6px 0;}</string>
       </property>
       <property name="text">
-       <string/>
+       <string>Comunión Sergio</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
